new changes update model

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #37af27; }
+  background: #409d53; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #22dcae; }
+  background: #9d0f75; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9e8ae8; }
+  background: #9f5c93; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #da2b2b; }
+  background: #0be27b; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #723b15; }
+  background: #ae0586; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #891fb8; }
+  background: #c48079; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #1781ac; }
+  background: #e45764; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #e7c95f; }
+  background: #75d174; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #f8dc82; }
+  background: #f17d33; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #b0a8e5; }
+  background: #b5bea1; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #988a9d; }
+  background: #d50160; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #4e3620; }
+  background: #3f6475; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #987680; }
+  background: #da324d; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #27c01d; }
+  background: #65c2a9; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #721fc1; }
+  background: #5fbf4a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #0d1752; }
+  background: #793a71; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #f89fe0; }
+  background: #33a453; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #a923a1; }
+  background: #b027fc; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #ed9646; }
+  background: #e8ce29; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #fbc165; }
+  background: #7e326c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #4f42f2; }
+  background: #4b2ae2; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #3ccbd1; }
+  background: #8050dc; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #e160d0; }
+  background: #0663fa; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #a996e7; }
+  background: #5a65af; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #630532; }
+  background: #075720; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #6dcb7c; }
+  background: #56073c; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #81afbd; }
+  background: #a7a571; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #35d56e; }
+  background: #d3e762; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #14c9b6; }
+  background: #ea5a21; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #dba683; }
+  background: #e2c85d; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #86ca4b; }
+  background: #1e5f55; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #5806ab; }
+  background: #324332; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #f73ac2; }
+  background: #ae0fd6; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #7efd10; }
+  background: #547145; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #ea3a31; }
+  background: #d3f0c3; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #65ec25; }
+  background: #297ab8; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #aa9f83; }
+  background: #7ea329; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #113049; }
+  background: #247e89; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #4d35e2; }
+  background: #d0d284; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #387f2f; }
+  background: #fddb9d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d9888d; }
+  background: #2afb16; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #fd517e; }
+  background: #77657b; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #503716; }
+  background: #6a2ee7; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #4c6ef8; }
+  background: #5aca93; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #78ceb8; }
+  background: #19feff; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #3bced0; }
+  background: #4339e5; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #51c7fb; }
+  background: #f0776d; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #356717; }
+  background: #a89c67; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #454929; }
+  background: #c3a1b2; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #dc210b; }
+  background: #1c8247; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #805176; }
+  background: #cf3365; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #4e39c9; }
+  background: #f0d4c6; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #7c4a6d; }
+  background: #8ead81; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #a748b9; }
+  background: #c0d452; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #7ea0f8; }
+  background: #ec73e8; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #2e0aef; }
+  background: #2fe678; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #b34d84; }
+  background: #725f1c; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #baff39; }
+  background: #4ebf0a; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #c25154; }
+  background: #9b3c86; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #ff3c4e; }
+  background: #78703a; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #a064be; }
+  background: #b69326; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #8b706e; }
+  background: #af1a5e; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #368ed0; }
+  background: #2082f8; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f2e18b; }
+  background: #3e51f3; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #09797d; }
+  background: #a29f61; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #6099b5; }
+  background: #0ac168; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #0f5831; }
+  background: #1c63ea; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #d7edfc; }
+  background: #7601a4; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #9d6ce3; }
+  background: #064ad6; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d761c6; }
+  background: #721dda; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #aa2717; }
+  background: #a163db; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #ea1638; }
+  background: #932e1b; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #dadc28; }
+  background: #63d3bd; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #2eaa20; }
+  background: #045239; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #0d2478; }
+  background: #66e3de; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #43ebd4; }
+  background: #ab0455; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #f108d1; }
+  background: #9d9070; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #4362d5; }
+  background: #8dd2a9; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #98c9d0; }
+  background: #55172c; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #f1ba93; }
+  background: #33a029; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #3e178f; }
+  background: #eb0ca6; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #aef659; }
+  background: #787230; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #b61029; }
+  background: #539a5e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #3ceda1; }
+  background: #9525ff; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b3c22b; }
+  background: #3e8d28; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #17dc97; }
+  background: #12558f; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #d7e960; }
+  background: #392c64; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #20daa5; }
+  background: #18104e; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #cff7f9; }
+  background: #16b5dd; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #0a2ef4; }
+  background: #7a0de4; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #6ca2d5; }
+  background: #0319a4; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #321447; }
+  background: #368292; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #6ab03c; }
+  background: #b67c32; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #5881b5; }
+  background: #cc1299; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #38c949; }
+  background: #7dfe50; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #6cc467; }
+  background: #ffa3fd; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #7605de; }
+  background: #cbce8f; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #7d4d55; }
+  background: #fc2f71; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #7d18b5; }
+  background: #83e77f; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #1e4869; }
+  background: #8fa0a0; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11473,7 +11473,7 @@ input:checked + .sliders:before {
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn a {
       color: #000000;
       text-decoration: none;
-      font-size: 14px; }
+      font-size: 12px; }
       .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn a span {
         background: #776fff;
         border-radius: 50%;
@@ -11493,7 +11493,7 @@ input:checked + .sliders:before {
       position: absolute;
       top: 50%;
       margin-left: -3px;
-      top: 22px;
+      top: 18px;
       left: 55px;
       width: 70%; }
     .query-wizard-exp-contents .query-wizard-expension .fields-wrappter div {
@@ -11501,7 +11501,8 @@ input:checked + .sliders:before {
     .query-wizard-exp-contents .query-wizard-expension .fields-wrappter .disabled-input {
       background: #776fff;
       border: 1px solid #776fff;
-      padding: 8px;
+      padding: 8px 10px;
+      font-size: 12px;
       color: #fff;
       border-radius: 25px; }
   .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter {
@@ -11530,7 +11531,8 @@ input:checked + .sliders:before {
     .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter .disabled-input {
       background: #fff;
       border: 2px solid #776fff;
-      padding: 8px;
+      padding: 8px 10px;
+      font-size: 12px;
       color: #776fff;
       border-radius: 25px; }
 
@@ -11543,7 +11545,8 @@ input:checked + .sliders:before {
   padding: 6px 6px 3px;
   border: 2px solid #776fff;
   border-radius: 50px;
-  color: #776fff; }
+  color: #776fff;
+  font-size: 12px; }
 
 .rule-btn {
   margin-right: 8px; }
@@ -11553,7 +11556,8 @@ input:checked + .sliders:before {
   border: 2px solid #776fff;
   padding: 8px 2px 8px 8px;
   color: #fff;
-  border-radius: 25px; }
+  border-radius: 25px;
+  font-size: 12px; }
   .togleBtn span {
     background: #fff;
     border: 2px solid #fff;
