--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -930,7 +930,7 @@ input:checked+.sliders:before {
     a {
       color: #000000;
       text-decoration: none;
-      font-size: 14px;
+      font-size: 12px;
 
       span {
         background: #776fff;
@@ -958,7 +958,7 @@ input:checked+.sliders:before {
       position: absolute;
       top: 50%;
       margin-left: -3px;
-      top: 22px;
+      top: 18px;
       left: 55px;
       width: 70%;
     }
@@ -970,7 +970,8 @@ input:checked+.sliders:before {
     .disabled-input {
       background: #776fff;
       border: 1px solid #776fff;
-      padding: 8px;
+      padding: 8px 10px;
+      font-size: 12px;
       color: #fff;
       border-radius: 25px;
     }
@@ -1009,7 +1010,8 @@ input:checked+.sliders:before {
     .disabled-input {
       background: #fff;
       border: 2px solid #776fff;
-      padding: 8px;
+      padding: 8px 10px;
+      font-size: 12px;
       color: #776fff;
       border-radius: 25px;
     }
@@ -1028,6 +1030,7 @@ input:checked+.sliders:before {
   border: 2px solid #776fff;
   border-radius: 50px;
   color: #776fff;
+  font-size: 12px;
 }
 
 .rule-btn {
@@ -1040,6 +1043,7 @@ input:checked+.sliders:before {
   padding: 8px 2px 8px 8px;
   color: #fff;
   border-radius: 25px;
+  font-size: 12px;
 
   span {
     background: #fff;
