--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #409d53; }
+  background: #8c80cb; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #9d0f75; }
+  background: #791a5f; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9f5c93; }
+  background: #ed1c3d; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #0be27b; }
+  background: #552540; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #ae0586; }
+  background: #0293ed; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #c48079; }
+  background: #c49c29; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #e45764; }
+  background: #27a8ff; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #75d174; }
+  background: #0f62b3; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #f17d33; }
+  background: #144560; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #b5bea1; }
+  background: #494803; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #d50160; }
+  background: #d8395c; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #3f6475; }
+  background: #a4aced; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #da324d; }
+  background: #553203; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #65c2a9; }
+  background: #7d40e8; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #5fbf4a; }
+  background: #7116a8; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #793a71; }
+  background: #ece583; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #33a453; }
+  background: #487b41; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #b027fc; }
+  background: #a6d0a9; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #e8ce29; }
+  background: #0920d3; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #7e326c; }
+  background: #11afb5; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #4b2ae2; }
+  background: #9374e5; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #8050dc; }
+  background: #c526ad; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #0663fa; }
+  background: #711f22; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #5a65af; }
+  background: #f4fb71; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #075720; }
+  background: #4c6ceb; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #56073c; }
+  background: #8f09eb; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a7a571; }
+  background: #26aa5e; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #d3e762; }
+  background: #3f6672; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ea5a21; }
+  background: #ecc948; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #e2c85d; }
+  background: #afdd10; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #1e5f55; }
+  background: #070d25; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #324332; }
+  background: #9a6960; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #ae0fd6; }
+  background: #3c1804; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #547145; }
+  background: #2ba722; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #d3f0c3; }
+  background: #ca5790; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #297ab8; }
+  background: #86ba54; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #7ea329; }
+  background: #a3b5ce; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #247e89; }
+  background: #091bad; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #d0d284; }
+  background: #682e15; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #fddb9d; }
+  background: #e511d0; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #2afb16; }
+  background: #a93865; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #77657b; }
+  background: #d3793a; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #6a2ee7; }
+  background: #9bf929; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #5aca93; }
+  background: #62ce2c; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #19feff; }
+  background: #0a395e; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #4339e5; }
+  background: #d89d24; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #f0776d; }
+  background: #d7987a; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #a89c67; }
+  background: #5b1da8; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #c3a1b2; }
+  background: #0ba183; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #1c8247; }
+  background: #b7d18b; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #cf3365; }
+  background: #94f786; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #f0d4c6; }
+  background: #06bd0c; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #8ead81; }
+  background: #f9e2fc; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #c0d452; }
+  background: #de2865; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #ec73e8; }
+  background: #cae8fc; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #2fe678; }
+  background: #180ec5; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #725f1c; }
+  background: #96ed01; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #4ebf0a; }
+  background: #332044; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #9b3c86; }
+  background: #d2dd94; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #78703a; }
+  background: #b7f927; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #b69326; }
+  background: #bd17d2; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #af1a5e; }
+  background: #de1a94; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #2082f8; }
+  background: #eb308b; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #3e51f3; }
+  background: #f12c72; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #a29f61; }
+  background: #875a80; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #0ac168; }
+  background: #0a7897; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #1c63ea; }
+  background: #1f6a76; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #7601a4; }
+  background: #2e7617; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #064ad6; }
+  background: #a1325a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #721dda; }
+  background: #88d8ca; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a163db; }
+  background: #265e28; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #932e1b; }
+  background: #b4950c; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #63d3bd; }
+  background: #d7a148; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #045239; }
+  background: #d231b2; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #66e3de; }
+  background: #141807; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #ab0455; }
+  background: #f88cd4; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #9d9070; }
+  background: #9b79d9; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #8dd2a9; }
+  background: #0e9fc1; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #55172c; }
+  background: #d087eb; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #33a029; }
+  background: #60b54a; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #eb0ca6; }
+  background: #3f68c2; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #787230; }
+  background: #b0c5ca; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #539a5e; }
+  background: #ff2656; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #9525ff; }
+  background: #629296; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #3e8d28; }
+  background: #de4493; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #12558f; }
+  background: #b00e4e; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #392c64; }
+  background: #1771d5; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #18104e; }
+  background: #22e2c2; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #16b5dd; }
+  background: #a0660a; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #7a0de4; }
+  background: #d16da0; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #0319a4; }
+  background: #8ef148; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #368292; }
+  background: #8687bf; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #b67c32; }
+  background: #55131b; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #cc1299; }
+  background: #b925bb; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #7dfe50; }
+  background: #ce21e9; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #ffa3fd; }
+  background: #abe663; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #cbce8f; }
+  background: #bf66de; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #fc2f71; }
+  background: #fa1a85; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #83e77f; }
+  background: #92682a; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #8fa0a0; }
+  background: #ecf030; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11455,21 +11455,22 @@ input:checked + .sliders:before {
   display: flex !important;
   justify-content: space-between !important;
   align-items: center !important;
-  margin-bottom: 30px; }
+  margin-bottom: 43px; }
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img {
     margin-left: 10px !important;
-    margin-right: 10px !important; }
+    margin-right: 10px !important;
+    padding: 0px; }
   .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn {
     position: relative;
-    padding-left: 30px; }
+    padding-left: 18px; }
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn::after {
       content: "";
       width: 0;
       height: 55px;
       position: absolute;
       border: 1px solid #776fff;
-      top: -54px;
-      left: 49px; }
+      top: -60px;
+      left: 38px; }
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn a {
       color: #000000;
       text-decoration: none;
@@ -11494,7 +11495,7 @@ input:checked + .sliders:before {
       top: 50%;
       margin-left: -3px;
       top: 18px;
-      left: 55px;
+      left: 45px;
       width: 70%; }
     .query-wizard-exp-contents .query-wizard-expension .fields-wrappter div {
       z-index: 4; }
@@ -11521,11 +11522,11 @@ input:checked + .sliders:before {
     .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter::after {
       content: "";
       width: 0;
-      height: 84px;
+      height: 62px;
       position: absolute;
       border: 1px solid #776fff;
-      top: -55px;
-      left: 52px; }
+      top: -59px;
+      left: 42px; }
     .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter div {
       z-index: 2; }
     .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter .disabled-input {
@@ -11566,11 +11567,12 @@ input:checked + .sliders:before {
     border-radius: 15px; }
 
 .togleBtnDisable {
-  background: #cfcfcf;
-  border: 2px solid #cfcfcf;
-  padding: 8px 2px 8px 8px;
+  background: #776fff;
+  border: 2px solid #776fff;
+  padding: 8px 8px 8px 2px;
   color: #fff;
-  border-radius: 25px; }
+  border-radius: 25px;
+  font-size: 12px; }
   .togleBtnDisable span {
     background: #fff;
     border: 2px solid #fff;
@@ -11585,7 +11587,7 @@ input:checked + .sliders:before {
   .and-or-div::after {
     content: "";
     width: 0;
-    height: 100px;
+    height: 92px;
     position: absolute;
     border: 1px solid #776fff;
     top: 0px;
